--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,4 +34,7 @@ jobs:
         cd /home/ubuntu/actions-runner/_work/Node_Js_Application/Node_Js_Application
         pm2 start index.js --name "my-node-app"
     - name: Check application status
-      run: pm2 status
+      run: |
+          pm2 status
+          pm2 log index.js
+      
