--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Start application with PM2
       run: |
         cd /home/ubuntu/actions-runner/_work/Node_Js_Application/Node_Js_Application
-        pm2 start index.js --name "my-node-app" --time
+        pm2 start index.js --name "my-node-app"
     - name: Check application status
       run: |
           pm2 status
