--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,5 +42,18 @@ jobs:
     - name: Check application status
       run: |
           pm2 status
+  Create_Docker_image:
+   needs: [Installing_pm2_and_deploy_application]
+   runs-on: self-hosted
+   steps: 
+     - name: Checkout code
+       uses: actions/checkout@v3
+     - name: build image
+       run: |           
+            sudo docker build /home/ubuntu/actions-runner/_work/Node_js_Application/Node_js_Application --tag my-node-app
+     - name: check docker images
+       run: |           
+           docker images
+
          
       
