--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -55,5 +55,16 @@ jobs:
        run: |           
            docker images
 
+  Build_Docker_image:
+    needs: Create_Docker_image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build and push Docker image
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker tag my-node-app:latest https://arintech01.jfrog.io/artifactory/api/docker/test/my-node-app:latest
+          docker push https://arintech01.jfrog.io/artifactory/api/docker/test/my-node-app:latest
          
       
