--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -54,17 +54,15 @@ jobs:
      - name: check docker images
        run: |           
            docker images
-
-  Build_Docker_image:
-    needs: Create_Docker_image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Build and push Docker image
-        run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker tag my-node-app:latest https://arintech01.jfrog.io/artifactory/api/docker/test/my-node-app:latest
-          docker push https://arintech01.jfrog.io/artifactory/api/docker/test/my-node-app:latest
+  Pushing_Docker_image_in_jfrog:
+   needs: Create_Docker_image
+   runs-on: self-hosted
+   steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Push Docker image
+      run: |
+        docker login -umohit@arintech.in -p ${{ secrets.DOCKER_PASSWORD }} arintech01.jfrog.io
+        docker tag my-node-app:latest arintech01.jfrog.io/my-jfrog-repository/my-node-app:latest
+        docker push arintech01.jfrog.io/my-jfrog-repository/my-node-app:latest
          
-      
