--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -53,7 +53,7 @@ jobs:
             sudo docker build /home/ubuntu/actions-runner/_work/Node_Js_Application/Node_Js_Application --tag my-node-app
      - name: check docker images
        run: |           
-           docker images
+           sudo docker images
   Pushing_Docker_image_in_jfrog:
    needs: Create_Docker_image
    runs-on: self-hosted
