--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,4 +42,4 @@ jobs:
     - name: Check application status
       run: |
            pm2 status
-           pm2 logs
+           pm2 logs --lines 3
