--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,18 +27,17 @@ jobs:
    steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    - name: PM2 installation & Verify
-      run: |
-        sudo npm install -g pm2
-        pm2 --version || true
-    - name: Stop existing PM2 processes
-      run: |
-        cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application
-        pm2 delete all || true
+#     - name: PM2 installation & Verify
+#       run: |
+#         sudo npm install -g pm2
+#         pm2 --version || true
+#     - name: Stop existing PM2 processes
+#       run: |
+#         cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application
+#         pm2 delete all || true
     - name: Start application with PM2
       run: |
         cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application
-        pm2 reload ecosystem.config.js
         pm2 start index.js --name "my-node-app"
     - name: Check application status
       run: |
