--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -41,5 +41,5 @@ jobs:
         sudo pm2 start index.js --name "my-node-app"
     - name: Check application status
       run: |
-           pm2 status
+           sudo pm2 status
      
