--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,17 +29,17 @@ jobs:
       uses: actions/checkout@v3
     - name: PM2 installation & Verify
       run: |
-         sudo npm install -g pm2
+         npm install -g pm2
          pm2 --version || true
     - name: Stop existing PM2 processes
       run: |
          cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application/
-         sudo pm2 delete all || true
+         pm2 delete all || true
     - name: Start application with PM2
       run: |
         cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application/
-        sudo pm2 start index.js --name "my-node-app"
+        pm2 start index.js --name "my-node-app"
     - name: Check application status
       run: |
-           sudo pm2 status
+           pm2 status
      
