--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/checkout@v3
     - name: PM2 installation & Verify
       run: |
-         npm install -g pm2
+         sudo npm install -g pm2
          pm2 --version || true
     - name: Stop existing PM2 processes
       run: |
