--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,12 +34,12 @@ jobs:
     - name: Stop existing PM2 processes
       run: |
          cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application/
-         pm2 delete all || true
+         sudo pm2 delete all || true
     - name: Start application with PM2
       run: |
         cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application/
-        pm2 start index.js --name "my-node-app"
+        sudo pm2 start index.js --name "my-node-app"
     - name: Check application status
       run: |
-           pm2 status
+           sudo pm2 status
    
