--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,4 +42,40 @@ jobs:
     - name: Check application status
       run: |
            sudo pm2 status
+  Create_Docker_image:
+   needs: [Installing_pm2_and_deploy_application]
+   runs-on: self-hosted
+   steps: 
+     - name: Checkout code
+       uses: actions/checkout@v3
+     - name: build image
+       run: |           
+            sudo docker build /home/ubuntu/actions-runner/_work/Node_Js_Application/Node_Js_Application --tag my-node-app
+     - name: check docker images
+       run: |           
+           sudo docker images
+  Pushing_Docker_image_in_jfrog:
+   needs: Create_Docker_image
+   runs-on: self-hosted
+   steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Push Docker image
+      run: |
+        docker login -umohit@arintech.in -p ${{ secrets.DOCKER_PASSWORD }} arintech01.jfrog.io
+        docker tag my-node-app:latest arintech01.jfrog.io/my-jfrog-repository/my-node-app:latest
+        docker push arintech01.jfrog.io/my-jfrog-repository/my-node-app:latest
+           
+  Configure_AWS_and_Deploy_Application_To_ECS:
+    needs: [Create_Docker_image]
+    runs-on: self-hosted
+    steps:      
+      - name: Configure AWS credentials
+        run: |
+           sudo apt install awscli -y
+           aws --version
+           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+           aws configure set default.region us-west-2  # Set your desired region
+
    
