--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,17 +33,17 @@ jobs:
          pm2 --version || true
     - name: Stop existing PM2 processes
       run: |
-         cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application/
+         cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application
          sudo pm2 delete all || true
     - name: Start application with PM2
       run: |
-        cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application/
+        cd /home/ubuntu/_work/Node_Js_Application/Node_Js_Application
         sudo pm2 start index.js --name "my-node-app"
     - name: Check application status
       run: |
            sudo pm2 status
   Create_Docker_image:
-   needs: [Installing_pm2_and_deploy_application]
+   needs: Installing_pm2_and_deploy_application
    runs-on: self-hosted
    steps: 
      - name: Checkout code
