--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -78,4 +78,12 @@ jobs:
            aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
            aws configure set default.region us-west-2  # Set your desired region
 
-   
+    Configure_ECS:
+     needs: [Configure_AWS]
+     runs-on: self-hosted
+     steps:      
+    
+       - name: Create ECS Cluster
+         run: |
+            aws ecs create-cluster --cluster-name my-node-student01
+ 
