--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -97,3 +97,16 @@ jobs:
          latest_revision=$(aws ecs describe-task-definition --task-definition node-app-deploy --query 'taskDefinition.revision')
          echo "Latest revision: $latest_revision"
 
+      - name: Create or update ECS service
+        run: |
+         if [[ "${{ env.service_exists }}" == "my-node-service-student01" ]]; then
+           echo "Service already exists. Performing update..."
+           latest_revision=$(aws ecs describe-task-definition --task-definition node-app-deploy-student01 --query 'taskDefinition.revision')
+           echo "Latest revision: $latest_revision"
+           aws ecs update-service --cluster my-node-student01 --service my-node-service-student01 --desired-count 1 --task-definition node-app-deploy-studentXX:$latest_revision
+         else
+           echo "Service does not exist. Creating a new service..."
+           latest_revision=$(aws ecs describe-task-definition --task-definition node-app-deploy-student01 --query 'taskDefinition.revision')
+           echo "Latest revision: $latest_revision"
+           aws ecs create-service --cluster my-node-student01 --service-name my-node-service-student01 --task-definition node-app-deploy-studentXX:$latest_revision --desired-count 1 --launch-type "FARGATE" --network-configuration "awsvpcConfiguration={subnets=[subnet-0ab5a9b7768b9b147],securityGroups=[sg-0c51e41191fbc4535],assignPublicIp=ENABLED}"
+         fi
