--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -103,10 +103,23 @@ jobs:
            echo "Service already exists. Performing update..."
            latest_revision=$(aws ecs describe-task-definition --task-definition node-app-deploy-student01 --query 'taskDefinition.revision')
            echo "Latest revision: $latest_revision"
-           aws ecs update-service --cluster my-node-student01 --service my-node-service-student01 --desired-count 1 --task-definition node-app-deploy-studentXX:$latest_revision
+           aws ecs update-service --cluster my-node-student01 --service my-node-service-student01 --desired-count 1 --task-definition node-app-deploy-student01:$latest_revision
          else
            echo "Service does not exist. Creating a new service..."
            latest_revision=$(aws ecs describe-task-definition --task-definition node-app-deploy-student01 --query 'taskDefinition.revision')
            echo "Latest revision: $latest_revision"
-           aws ecs create-service --cluster my-node-student01 --service-name my-node-service-student01 --task-definition node-app-deploy-studentXX:$latest_revision --desired-count 1 --launch-type "FARGATE" --network-configuration "awsvpcConfiguration={subnets=[subnet-0ab5a9b7768b9b147],securityGroups=[sg-0c51e41191fbc4535],assignPublicIp=ENABLED}"
+           aws ecs create-service --cluster my-node-student01 --service-name my-node-service-student01 --task-definition node-app-deploy-student01:$latest_revision --desired-count 1 --launch-type "FARGATE" --network-configuration "awsvpcConfiguration={subnets=[subnet-0ab5a9b7768b9b147],securityGroups=[sg-0c51e41191fbc4535],assignPublicIp=ENABLED}"
          fi
+      - name: Wait for the service to stabilize
+        run: |
+         echo "Waiting for service to stabilize..."
+         aws ecs wait services-stable --cluster my-node-student01 --services my-node-service-student01
+         
+      - name: Featch_Public_IP_Address
+        run: |
+         task_id=$(aws ecs list-tasks --cluster my-node-student01 --family node-app-deploy-student01 --query 'taskArns[0]' --output text | awk -F / '{print $NF}')
+         task_arn=$(aws ecs describe-tasks --cluster my-node-student01 --tasks $task_id --query 'tasks[0].taskArn' --output text)
+         eni_number=$(aws ecs describe-tasks --cluster my-node-student01 --tasks $task_arn --query 'tasks[0].attachments[0].details[?name==`networkInterfaceId`].value' --output text)
+         eni_id=$eni_number
+         public_ip=$(aws ec2 describe-network-interfaces --network-interface-ids $eni_id --query 'NetworkInterfaces[0].Association.PublicIp' --output text)
+         echo $public_ip
