--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -62,9 +62,9 @@ jobs:
       uses: actions/checkout@v2
     - name: Push Docker image
       run: |
-        sudo docker login -umohit@arintech.in -p ${{ secrets.DOCKER_PASSWORD }} arintech01.jfrog.io
-        sudo docker tag my-node-app:latest arintech01.jfrog.io/my-jfrog-repository/my-node-app:latest
-        sudo docker push arintech01.jfrog.io/my-jfrog-repository/my-node-app:latest
+        sudo docker login -ujohnalberto.dev@gmail.com arintech03.jfrog.io -p ${{ secrets.DOCKER_PASSWORD }} arintech03.jfrog.io
+        sudo docker tag my-node-app:latest arintech03.jfrog.io/my-jfrog-repository/my-node-app:latest
+        sudo docker push arintech03.jfrog.io/my-jfrog-repository/my-node-app:latest
            
   Configure_AWS:
     needs: [Create_Docker_image]
